.gsd/exec/43b9efbe-30a1-4340-a940-d1e088d058a9.stderr
warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:16:20
   |
16 |     apply_effects, grant_free_skill_events, resolve_action, target_shape_rejection_reason,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::combat::team::Team`
  --> src/combat/turn_system/pipeline.rs:23:5
   |
23 | use crate::combat::team::Team;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::types::SkillId`
  --> src/combat/turn_system/pipeline.rs:25:5
   |
25 | use crate::combat::types::SkillId;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:173:13
    |
173 |             mut attacker_ult,
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:181:13
    |
181 |             mut attacker_round_flags,
    |             ----^^^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:439:9
    |
439 |         mut attacker_ult,
    |         ----^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `turn_order`
   --> src/combat/turn_system/pipeline.rs:130:5
    |
130 |     turn_order: &mut ResMut<TurnOrder>,
    |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_turn_order`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `attacker_commander`
   --> src/combat/turn_system/pipeline.rs:444:9
    |
444 |         attacker_commander,
    |         ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attacker_commander`

warning: field `is_stunned` is never read
   --> src/combat/follow_up.rs:303:5
    |
297 | struct FormIdentitySnapshot {
    |        -------------------- field in this struct
...
303 |     is_stunned: bool,
    |     ^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

   Compiling bevyrogue v0.1.0 (/home/fabio/dev/bevyrogue/.gsd/worktrees/M015)
warning: `bevyrogue` (lib) generated 9 warnings (run `cargo fix --lib -p bevyrogue` to apply 8 suggestions)
warning: unused imports: `CombatKernelConfig` and `HolySupportSignal`
  --> tests/holy_support_mechanics.rs:10:5
   |
10 |     CombatKernelConfig, CombatKernelRegistry, CombatKernelTransition, CombatTagChangeKind,
   |     ^^^^^^^^^^^^^^^^^^
11 |     CombatTagState, CombatTagTransition, HolySupportSignal, TacticalCyclePhase, TacticalCycleStep,
   |                                          ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `bevyrogue::combat::team::Team`
  --> tests/holy_support_mechanics.rs:18:5
   |
18 | use bevyrogue::combat::team::Team;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LegalityReasonCode`
  --> tests/status_effect_integration.rs:22:17
   |
22 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
  --> tests/patamon_revive.rs:18:17
   |
18 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LegalityReasonCode`
  --> tests/toughness_categories.rs:22:17
   |
22 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `custom_signals` in initializer of `SkillDef`
  --> tests/toughness_categories.rs:32:20
   |
32 |     SkillBook(vec![SkillDef {
   |                    ^^^^^^^^ missing `custom_signals`

error[E0063]: missing fields `animation_sequence`, `custom_signals` and `qte` in initializer of `SkillDef`
  --> tests/patamon_revive.rs:33:9
   |
33 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence`, `custom_signals` and `qte`

error[E0063]: missing fields `animation_sequence`, `custom_signals` and `qte` in initializer of `SkillDef`
  --> tests/status_effect_integration.rs:88:5
   |
88 |     SkillDef {
   |     ^^^^^^^^ missing `animation_sequence`, `custom_signals` and `qte`

error[E0063]: missing fields `animation_sequence`, `custom_signals` and `qte` in initializer of `SkillDef`
  --> tests/patamon_revive.rs:48:9
   |
48 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence`, `custom_signals` and `qte`

For more information about this error, try `rustc --explain E0063`.
warning: `bevyrogue` (test "patamon_revive") generated 1 warning
error: could not compile `bevyrogue` (test "patamon_revive") due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
warning: `bevyrogue` (test "status_effect_integration") generated 1 warning
error: could not compile `bevyrogue` (test "status_effect_integration") due to 1 previous error; 1 warning emitted
warning: `bevyrogue` (test "toughness_categories") generated 1 warning
error: could not compile `bevyrogue` (test "toughness_categories") due to 1 previous error; 1 warning emitted
warning: `bevyrogue` (test "holy_support_mechanics") generated 2 warnings (run `cargo fix --test "holy_support_mechanics" -p bevyrogue` to apply 2 suggestions)
warning: unused import: `LegalityReasonCode`
  --> src/combat/follow_up_tests.rs:22:17
   |
22 |         Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:16:20
   |
16 |     apply_effects, grant_free_skill_events, resolve_action, target_shape_rejection_reason,
   |                    ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LegalityReasonCode`
  --> src/combat/turn_system/tests.rs:14:13
   |
14 |     Effect, LegalityReasonCode, SelfTargetRule, SkillBook, SkillDef, SkillImplementation,
   |             ^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
    --> src/combat/kernel.rs:1274:13
     |
1274 |         let mut step = TacticalCycleStep::default();
     |             ----^^^^
     |             |
     |             help: remove this `mut`
     |
     = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:173:13
    |
173 |             mut attacker_ult,
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: function `advance_turn_system_skips_stunned_unit_OLD` should have a snake case name
  --> src/combat/turn_system/tests.rs:77:4
   |
77 | fn advance_turn_system_skips_stunned_unit_OLD() {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_skips_stunned_unit_old`
   |
   = note: `#[warn(non_snake_case)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: function `advance_turn_system_burn_clamps_hp_and_expires_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:118:4
    |
118 | fn advance_turn_system_burn_clamps_hp_and_expires_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_burn_clamps_hp_and_expires_old`

warning: function `advance_turn_system_freeze_updates_and_clears_speed_modifier_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:166:4
    |
166 | fn advance_turn_system_freeze_updates_and_clears_speed_modifier_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_freeze_updates_and_clears_speed_modifier_old`

warning: function `advance_turn_system_shock_zero_percent_does_not_cancel_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:211:4
    |
211 | fn advance_turn_system_shock_zero_percent_does_not_cancel_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_shock_zero_percent_does_not_cancel_old`

warning: function `advance_turn_system_shock_full_cancel_emits_action_failed_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:265:4
    |
265 | fn advance_turn_system_shock_full_cancel_emits_action_failed_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_shock_full_cancel_emits_action_failed_old`

warning: function `advance_turn_system_stunned_unit_skips_status_tick_OLD` should have a snake case name
   --> src/combat/turn_system/tests.rs:318:4
    |
318 | fn advance_turn_system_stunned_unit_skips_status_tick_OLD() {
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `advance_turn_system_stunned_unit_skips_status_tick_old`

warning: `bevyrogue` (lib test) generated 18 warnings (7 duplicates) (run `cargo fix --lib -p bevyrogue --tests` to apply 5 suggestions)
